--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -5,6 +5,10 @@
     background-position: bottom center -60px;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     & > .boxed {
       display: flex;
@@ -44,6 +48,7 @@
     }
     &__image {
       margin-top: 60px;
+      width: 100%;
     }
   }
 
@@ -199,6 +204,7 @@
       background-image: url("../assets/finance-ellipse.png");
       background-position: bottom right;
       background-repeat: no-repeat;
+      background-size: 100% auto;
       padding-block: 40px;
       border-radius: 32px;
 
@@ -246,7 +252,7 @@
       }
       &__image {
         margin-top: 30px;
-        max-width: 500px;
+        // max-width: 500px;
       }
     }
 
@@ -256,7 +262,7 @@
         gap: 30px;
 
         & > h2 {
-          font-size: 40px;
+          font-size: 44px;
           width: 450px;
         }
       }
@@ -275,12 +281,12 @@
           & > h3 {
             max-width: 300px;
             text-align: center;
-            font-size: 20px;
+            font-size: 28px;
           }
           & > p {
             max-width: 250px;
             text-align: center;
-            font-size: 14px;
+            font-size: 16px;
           }
 
           & > button {
@@ -290,7 +296,7 @@
         }
         &__image {
           width: 355px;
-          height: 230px;
+          height: 210px;
         }
       }
       &__bottom {
@@ -303,13 +309,13 @@
           gap: 20px;
           & > h3 {
             max-width: 470px;
-            font-size: 25px;
+            font-size: 28px;
             text-align: center;
           }
           & > p {
             max-width: 450px;
             text-align: center;
-            font-size: 14px;
+            font-size: 16px;
           }
         }
         &__right {
@@ -318,13 +324,13 @@
           gap: 20px;
           & > h3 {
             max-width: 470px;
-            font-size: 25px;
+            font-size: 28px;
             text-align: center;
           }
           & > p {
             max-width: 450px;
             text-align: center;
-            font-size: 14px;
+            font-size: 16px;
           }
         }
       }
@@ -338,11 +344,11 @@
 
         & > h2 {
           width: 400px;
-          font-size: 40px;
+          font-size: 44px;
         }
       }
       &__image {
-        max-width: 700px;
+        // max-width: 700px;
         height: auto;
       }
     }
@@ -351,12 +357,12 @@
       padding: 80px 0 10px 0;
       & > .boxed {
         & > h1 {
-          max-width: 300px;
-          font-size: 38px;
+          max-width: 500px;
+          font-size: 44px;
         }
       }
       &__image {
-        max-width: 900px;
+        // max-width: 900px;
         height: auto;
       }
     }
@@ -369,8 +375,12 @@
 
         & > h1 {
           max-width: 450px;
-          font-size: 38px;
+          font-size: 44px;
         }
+      }
+      &__logo {
+        width: 55px;
+        height: 55px;
       }
     }
   }
@@ -385,11 +395,11 @@
       & > .boxed {
         gap: 22px;
         & > h1 {
-          font-size: 44px;
-          width: 450px;
+          font-size: 38px;
+          width: 530px;
         }
         & > p {
-          font-size: 18px;
+          font-size: 16px;
           width: 450px;
           opacity: 0.8;
         }
@@ -397,14 +407,23 @@
 
       &__badge {
         width: 250px;
-        padding: 8px 10px;
+        padding: 8px 11px;
       }
       &__cta {
         display: flex;
+
+        & > .btn-fill {
+          padding: 6px 12px;
+          font-size: 14px;
+        }
+        & > .btn-outline {
+          padding: 8px 14px;
+          font-size: 14px;
+        }
       }
       &__image {
         margin-top: 30px;
-        width: 800px;
+        max-width: 900px;
         height: auto;
       }
     }
@@ -415,15 +434,15 @@
         gap: 30px;
 
         & > h2 {
-          font-size: 33px;
-          width: 350px;
+          font-size: 38px;
+          width: 500px;
         }
       }
 
       &__top {
         display: flex;
-        flex-direction: column;
         margin-top: 0;
+        gap: 50px;
         &__left {
           display: flex;
           flex-direction: column;
@@ -434,23 +453,23 @@
           & > h3 {
             max-width: 300px;
             text-align: center;
-            font-size: 20px;
+            font-size: 22px;
           }
           & > p {
-            max-width: 250px;
+            max-width: 450px;
             text-align: center;
-            font-size: 14px;
+            font-size: 15px;
           }
 
           & > button {
-            padding: 10px 18px;
+            padding: 6px 12px;
             cursor: pointer;
           }
         }
         &__image {
-          margin-top: 30px;
-          width: 305px;
-          height: 200px;
+          //   margin-top: 30px;
+          width: 320px;
+          height: 170px;
         }
       }
       &__bottom {
@@ -463,13 +482,13 @@
           gap: 20px;
           & > h3 {
             max-width: 470px;
-            font-size: 25px;
+            font-size: 22px;
             text-align: center;
           }
           & > p {
             max-width: 450px;
             text-align: center;
-            font-size: 14px;
+            font-size: 15px;
           }
         }
         &__right {
@@ -478,13 +497,13 @@
           gap: 20px;
           & > h3 {
             max-width: 470px;
-            font-size: 25px;
+            font-size: 22px;
             text-align: center;
           }
           & > p {
             max-width: 450px;
             text-align: center;
-            font-size: 14px;
+            font-size: 15px;
           }
         }
       }
@@ -497,12 +516,11 @@
         padding-block: 50px;
 
         & > h2 {
-          width: 320px;
-          font-size: 35px;
+          width: 500px;
+          font-size: 38px;
         }
       }
       &__image {
-        max-width: 500px;
         height: auto;
       }
     }
@@ -516,7 +534,7 @@
         }
       }
       &__image {
-        max-width: 700px;
+        max-width: 800px;
         height: auto;
       }
     }
@@ -524,6 +542,7 @@
     &__finances {
       padding-block: 40px;
       padding-inline: 0;
+      margin-inline: 30px;
       & > .boxed {
         gap: 30px;
         width: 100%;
@@ -534,13 +553,18 @@
           text-align: center;
         }
         & > p {
-          max-width: 350px;
+          max-width: 590px;
           font-size: 16px;
           text-align: center;
         }
         & > button {
           cursor: pointer;
+          padding: 6px 12px;
         }
+      }
+      &__logo {
+        width: 55px;
+        height: 55px;
       }
     }
   }
@@ -549,30 +573,43 @@
 @media (max-width: 430px) {
   .home {
     &__hero {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       & > .boxed {
         gap: 22px;
         & > h1 {
-          font-size: 37px;
-          width: 310px;
+          font-size: 23px;
+          width: 300px;
         }
         & > p {
-          font-size: 15px;
-          width: 300px;
+          font-size: 14px;
+          width: 290px;
           opacity: 0.8;
         }
       }
 
       &__badge {
         width: 250px;
-        padding: 8px 10px;
+        padding: 6px 8px;
       }
       &__cta {
         display: flex;
         flex-direction: column;
+
+        & > .btn-fill {
+          padding: 6px 12px;
+          font-size: 14px;
+        }
+        & > .btn-outline {
+          padding: 8px 14px;
+          font-size: 14px;
+        }
       }
       &__image {
         margin-top: 30px;
-        max-width: 310px;
+        max-width: 315px;
       }
     }
 
@@ -582,7 +619,7 @@
         gap: 30px;
 
         & > h2 {
-          font-size: 30px;
+          font-size: 23px;
           width: 300px;
         }
       }
@@ -600,7 +637,7 @@
 
           & > h3 {
             max-width: 470px;
-            font-size: 25px;
+            font-size: 22px;
             text-align: center;
           }
           & > p {
@@ -611,14 +648,15 @@
 
           & > button {
             margin-top: 10px;
-            padding: 10px 18px;
+            padding: 6px 12px;
+            font-size: 14px;
             cursor: pointer;
           }
         }
         &__image {
           margin-top: 30px;
           width: 385px;
-          height: 200px;
+          height: 140px;
         }
       }
       &__bottom {
@@ -632,7 +670,7 @@
           gap: 20px;
           & > h3 {
             max-width: 470px;
-            font-size: 25px;
+            font-size: 22px;
             text-align: center;
           }
           & > p {
@@ -647,7 +685,7 @@
           gap: 20px;
           & > h3 {
             max-width: 470px;
-            font-size: 25px;
+            font-size: 22px;
             text-align: center;
           }
           & > p {
@@ -667,11 +705,11 @@
 
         & > h2 {
           width: 320px;
-          font-size: 35px;
+          font-size: 23px;
         }
       }
       &__image {
-        max-width: 300px;
+        max-width: 310px;
         height: auto;
       }
     }
@@ -681,35 +719,41 @@
       & > .boxed {
         & > h1 {
           max-width: 300px;
-          font-size: 38px;
+          font-size: 23px;
         }
       }
       &__image {
-        max-width: 300px;
+        max-width: 310px;
         height: auto;
       }
     }
 
     &__finances {
-      padding-block: 70px;
+      padding-block: 30px;
       padding-inline: 0;
-
+      margin-inline: 10px;
       & > .boxed {
         gap: 30px;
         max-width: 330px;
         & > h1 {
           max-width: 350px;
-          font-size: 38px;
+          font-size: 23px;
           text-align: center;
         }
         & > p {
           max-width: 350px;
-          font-size: 16px;
+          font-size: 14px;
           text-align: center;
         }
         & > button {
+          padding: 6px 12px;
+          font-size: 14px;
           cursor: pointer;
         }
+      }
+      &__logo {
+        width: 50px;
+        height: 50px;
       }
     }
   }
