--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -13,7 +13,7 @@
     align-items: center;
     border-radius: 100px;
     background: rgba(255, 255, 255, 0.05);
-    padding: 15px 20px;
+    padding: 12px 18px;
   }
 
   &__links {
@@ -163,19 +163,30 @@
   }
 
   @media (max-width: 1024px) and (min-width: 769px) {
-    &__links {
-      gap: 10px;
-      padding: 6px;
-      &__link {
-        padding: 8px 15px;
+    .navbar {
+      &__links {
+        gap: 10px;
+        padding: 6px;
+        &__link {
+          padding: 8px 15px;
+        }
       }
-    }
-    &__logo {
-      padding: 5px 13px;
-    }
-    &__cta {
-      & > button {
-        padding: 10px 18px;
+      &__logo {
+        margin-left: 10px;
+        padding: 8px 14px;
+        & > span {
+          font-size: 18px;
+        } // margin-left: -50px;
+        &__img {
+          width: 30px;
+          height: 30px;
+        }
+      }
+      &__cta {
+        & > button {
+          padding: 10px 18px;
+          margin-right: 10px;
+        }
       }
     }
   }
@@ -186,7 +197,15 @@
       display: none;
     }
     &__logo {
-      padding: 6px 15px;
+      padding: 6px 12px;
+      margin-left: 10px;
+      & > span {
+        font-size: 16px;
+      } // margin-left: -50px;
+      &__img {
+        width: 26px;
+        height: 26px;
+      }
     }
     &__hamburger {
       display: block;
@@ -195,17 +214,19 @@
 
   @media (max-width: 480px) {
     & > .boxed {
-      padding: 15px 0;
+      padding: 15px;
     }
     &__hamburger {
-      margin-right: -40px;
+      // margin-right: -30px;
     }
     &__logo {
-      padding: 5px 12px;
-      margin-left: -50px;
+      padding: 3px 8px;
+      & > span {
+        font-size: 16px;
+      } // margin-left: -50px;
       &__img {
-        width: 30px;
-        height: 30px;
+        width: 26px;
+        height: 26px;
       }
     }
   }
